Buttons align and header align fix

--- a/Content/Site.css
+++ b/Content/Site.css
@@ -58,12 +58,16 @@ body {
 
 
 .simple-cloud-button {
-    background-color: deeppink !important;
+    background-color: deeppink;
     color: white !important;
     border: 0px;
     padding: 0;
     padding-left: 5px;
     padding-right: 5px;
+}
+
+.simple-cloud-button:hover {
+    background-color: lightpink !important;
 }
 
 @keyframes blick {
